# spring-boot-modernizer

./: .gitignore  CLAUDE.md  README.md  mcp_config_example.json  pyproject.toml  requirements.txt
mcp_server/: compatibility.py  maven_client.py  pom_handler.py  server.py
