[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spring-boot-modernizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "packaging>=23.0",
]

[project.scripts]
spring-modernizer = "mcp_server.server:main"
